--- a/src/pages/landing/landing.html
+++ b/src/pages/landing/landing.html
@@ -5,9 +5,9 @@
   </section>
 
   <section padding class="welcome-text">
-    <h5 padding class="text color-light" text-center>Welcome to your automated sales platform!</h5>
+    <h5 padding class="text color-light" text-center>{{ 'LANDING_PAGE.WELCOME' | translate }}</h5>
   </section>
 
-  <button ion-button block (click)="login()">Login</button>
+  <button ion-button block (click)="login()">{{ 'LOGIN' | translate }}</button>
 
 </ion-content>
