--- a/src/pages/ticket/ticket-qr-scanner/ticket-qr-scanner.html
+++ b/src/pages/ticket/ticket-qr-scanner/ticket-qr-scanner.html
@@ -2,5 +2,5 @@
   <div class="qrscanner-area"></div>
 </ion-content>
 <ion-footer>
-    <button class="cancel" (click)="cancel()" ion-button block color="clear" text-capitalize>Cancel</button>
+    <button class="cancel" (click)="cancel()" ion-button block color="clear" text-capitalize>{{'CANCEL' | translate}}</button>
 </ion-footer>
