--- a/src/pages/ticket/ticket-scan/ticket-scan.html
+++ b/src/pages/ticket/ticket-scan/ticket-scan.html
@@ -8,7 +8,7 @@
           <button no-padding text-capitalize ion-button clear color="clear" (click)="dismiss()" icon-left><ion-icon name="ios-arrow-back"></ion-icon>Cancel</button>
         </ion-col>
         <ion-col text-center col-8>
-          <ion-title><b>E-Ticket scan</b></ion-title>
+          <ion-title><b>{{'E_TICKET_PAGE.E_TICKET_SCAN' | translate}}</b></ion-title>
         </ion-col>
       </ion-row>
     </ion-grid>
