--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -5,13 +5,13 @@
     <ion-grid no-padding>
       <ion-row align-items-center>
         <ion-col text-left col-2>
-          <button no-padding text-capitalize ion-button clear color="clear" (click)="dismiss()" icon-left><ion-icon name="ios-arrow-back"></ion-icon>Cancel</button>
+          <button no-padding text-capitalize ion-button clear color="clear" (click)="dismiss()" icon-left><ion-icon name="ios-arrow-back"></ion-icon>{{ 'CANCEL' | translate}}</button>
         </ion-col>
         <ion-col text-center col-8>
-          <ion-title><b>Search & Filters</b></ion-title>
+          <ion-title><b>{{ 'SEARCH_FILTERS_PAGE.SEARCH_FILTERS' | translate}}</b></ion-title>
         </ion-col>
         <ion-col text-right col-2 *ngIf="extended">
-          <button no-padding text-capitalize clear color="clear" ion-button (click)="clearSearchParams()">Clear all</button>
+          <button no-padding text-capitalize clear color="clear" ion-button (click)="clearSearchParams()">{{ 'SEARCH_FILTERS_PAGE.CLEAR_ALL' | translate}}</button>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -26,7 +26,7 @@
   <ion-grid padding>
     <ion-row>
       <ion-col text-right>
-        <button small ion-button text-capitalize color="activated" (click)="switchType()">{{extended ? 'Order ID' : 'Detailed search'}}</button>
+        <button small ion-button text-capitalize color="activated" (click)="switchType()">{{extended ? ('SEARCH_FILTERS_PAGE.ORDER_ID' | translate) : ('SEARCH_FILTERS_PAGE.DETAILED_SEARCH' | translate)}}</button>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -37,7 +37,7 @@
 
       <ion-list>
         <ion-item no-margin no-padding>
-          <ion-input formControlName="purchase_id" type="text" placeholder="Order ID"></ion-input>
+          <ion-input formControlName="purchase_id" type="text" placeholder="{{ 'SEARCH_FILTERS_PAGE.ORDER_ID' | translate}}"></ion-input>
         </ion-item>
         <ion-label *ngIf="showedError" class="err-message" no-margin>
           {{ showedError }}
@@ -55,46 +55,46 @@
         <ion-item-divider style="min-height: 0"><ion-label no-margin></ion-label></ion-item-divider>
         <button no-padding ion-item icon-end (click)="setActive('product')">
           <ion-icon [color]="activeTab === 'product' ? 'primary' : 'dark'" name="{{activeTab === 'product' ? 'ios-arrow-up' :'ios-arrow-down'}}" item-end></ion-icon>
-          <ion-label padding-left [color]="activeTab === 'product' ? 'primary' : 'dark'">Product Name</ion-label>
+          <ion-label padding-left [color]="activeTab === 'product' ? 'primary' : 'dark'">{{ 'SEARCH_FILTERS_PAGE.PRODUCT_NAME' | translate}}</ion-label>
         </button>
 
         <form [formGroup]="searchFormExtended">
 
           <ion-list no-margin padding-top padding-horizontal [hidden]="activeTab !== 'product'">
             <ion-item no-margin no-padding>
-              <ion-input formControlName="purchase_id" type="text" placeholder="Order ID"></ion-input>
+              <ion-input formControlName="purchase_id" type="text" placeholder="{{ 'SEARCH_FILTERS_PAGE.ORDER_ID' | translate}}"></ion-input>
             </ion-item>
 
             <ion-item no-margin no-padding hidden>
               <ion-input formControlName="product_id" type="text" placeholder="Product ID"></ion-input>
             </ion-item>
 
-            <ion-auto-complete [dataProvider]="complServ" #searchbar (itemSelected)="selectedProduct($event)" [options]="{ placeholder : 'Product name' }"></ion-auto-complete>
+            <ion-auto-complete [dataProvider]="complServ" #searchbar (itemSelected)="selectedProduct($event)" [options]="{ placeholder : ('SEARCH_FILTERS_PAGE.PRODUCT_NAME' | translate) }"></ion-auto-complete>
             <button no-margin ion-button icon-only clear (click)="clearProduct()" class="clearAC"><ion-icon name="ios-close"></ion-icon></button>
           </ion-list>
 
           <button no-padding ion-item icon-end (click)="setActive('customer')">
             <ion-icon [color]="activeTab === 'customer' ? 'primary' : 'dark'" name="{{activeTab === 'customer' ? 'ios-arrow-up' :'ios-arrow-down'}}" item-end></ion-icon>
-            <ion-label padding-left [color]="activeTab === 'customer' ? 'primary' : 'dark'">Customer Info</ion-label>
+            <ion-label padding-left [color]="activeTab === 'customer' ? 'primary' : 'dark'">{{ 'SEARCH_FILTERS_PAGE.CUSTOMER_INFO' | translate}}</ion-label>
           </button>
           <ion-list *ngIf="activeTab === 'customer'">
             <ion-grid padding>
               <ion-row>
                 <ion-col col-6>
                   <ion-item no-margin no-padding>
-                    <ion-input formControlName="first_name" type="text" placeholder="First name"></ion-input>
+                    <ion-input formControlName="first_name" type="text" placeholder="{{ 'SEARCH_FILTERS_PAGE.FIRSTNAME' | translate}}"></ion-input>
                   </ion-item>
                 </ion-col>
                 <ion-col col-6>
                   <ion-item no-margin no-padding>
-                    <ion-input formControlName="last_name" type="text" placeholder="Last name"></ion-input>
+                    <ion-input formControlName="last_name" type="text" placeholder="{{ 'SEARCH_FILTERS_PAGE.LASTNAME' | translate}}"></ion-input>
                   </ion-item>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col col-12>
                   <ion-item no-margin no-padding>
-                    <ion-input formControlName="email" type="email" placeholder="Email"></ion-input>
+                    <ion-input formControlName="email" type="email" placeholder="{{ 'SEARCH_FILTERS_PAGE.EMAIL' | translate}}"></ion-input>
                   </ion-item>
                 </ion-col>
               </ion-row>
@@ -105,20 +105,20 @@
 
         <button no-padding ion-item icon-end (click)="setActive('transaction')">
           <ion-icon [color]="activeTab === 'transaction' ? 'primary' : 'dark'" name="{{activeTab === 'transaction' ? 'ios-arrow-up' :'ios-arrow-down'}}" item-end></ion-icon>
-          <ion-label padding-left [color]="activeTab === 'transaction' ? 'primary' : 'dark'">Transaction Details</ion-label>
+          <ion-label padding-left [color]="activeTab === 'transaction' ? 'primary' : 'dark'">{{ 'SEARCH_FILTERS_PAGE.TRANSACTION_DETAILS' | translate}}</ion-label>
         </button>
         <ion-list *ngIf="activeTab === 'transaction'">
           <ion-grid padding>
             <ion-row>
               <ion-col col-6>
                 <ion-item no-margin no-padding>
-                  <ion-datetime placeholder="Start day" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" [(ngModel)]="searchObj.from"></ion-datetime>
+                  <ion-datetime placeholder="{{ 'SEARCH_FILTERS_PAGE.START_DAY' | translate}}" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" [(ngModel)]="searchObj.from"></ion-datetime>
                   <!--<ion-input formControlName="from" type="text" placeholder="Start day"></ion-input>-->
                 </ion-item>
               </ion-col>
               <ion-col col-6>
                 <ion-item no-margin no-padding>
-                  <ion-datetime placeholder="End day" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" [(ngModel)]="searchObj.to"></ion-datetime>
+                  <ion-datetime placeholder="{{ 'SEARCH_FILTERS_PAGE.END_DAY' | translate}}" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" [(ngModel)]="searchObj.to"></ion-datetime>
                   <!--<ion-input formControlName="to" type="text" placeholder="End day"></ion-input>-->
                 </ion-item>
               </ion-col>
@@ -127,7 +127,7 @@
           <ion-list no-padding>
             <button no-padding ion-item (click)="openPageParams('Affiliate')">
               <ion-label padding-left>
-                Affiliate
+                {{ 'SEARCH_FILTERS_PAGE.AFFILIATE' | translate}}
               </ion-label>
               <div item-content class="item-content">
                 {{ getAffiliateValue() }}
@@ -136,7 +136,7 @@
             </button>
             <button no-padding ion-item (click)="openPageParams('Transaction type')">
               <ion-label padding-left>
-                Transaction Type
+                {{ 'SEARCH_FILTERS_PAGE.TRANSACTION_TYPE' | translate}}
               </ion-label>
               <div item-content class="item-content">
                 {{ getTypesValue(searchObj.transaction_type) }}
@@ -147,7 +147,7 @@
           <ion-grid>
             <ion-row>
               <ion-list-header no-margin>
-                Payment Method
+                {{ 'SEARCH_FILTERS_PAGE.PAYMENT_METHOD' | translate}}
               </ion-list-header>
             </ion-row>
             <ion-row>
@@ -162,7 +162,7 @@
           <ion-grid>
             <ion-row>
               <ion-list-header no-margin>
-                Currency
+                {{ 'SEARCH_FILTERS_PAGE.CURRENCY' | translate}}
               </ion-list-header>
             </ion-row>
             <ion-row padding-left padding-right>
@@ -178,7 +178,7 @@
             <ion-item-divider></ion-item-divider>
             <button ion-item (click)="openPageParams('Billing type')">
               <ion-label>
-                Billing Type
+                {{ 'SEARCH_FILTERS_PAGE.BILLING_TYPE' | translate }}
               </ion-label>
               <div item-content class="item-content">
                 {{ getTypesValue(searchObj.billing_type) }}
@@ -195,7 +195,7 @@
 </ion-content>
 
 <ion-footer>
-  <button large text-capitalize ion-button full color="secondary" no-margin (click)="submit()">Search</button>
+  <button large text-capitalize ion-button full color="secondary" no-margin (click)="submit()">{{ 'SEARCH_FILTERS_PAGE.SEARCH' | translate }}</button>
 </ion-footer>
 <section class="hideElementOnKeyboardShown bottom-logo">
   <img src="assets/img/logo-long.png">
