--- a/src/pages/ticket/ticket-check/ticket-check.html
+++ b/src/pages/ticket/ticket-check/ticket-check.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Check E-Ticket manually</ion-title>
+    <ion-title>{{'E_TICKET_PAGE.CHECK_MANUALLY' | translate}}</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -14,26 +14,26 @@
       <ion-row>
         <ion-col col-6>
           <ion-item no-margin no-padding>
-            <ion-input type="text" placeholder="First name" [(ngModel)]="params.firstName"></ion-input>
+            <ion-input type="text" placeholder="{{'E_TICKET_PAGE.FIRSTNAME' | translate}}" [(ngModel)]="params.firstName"></ion-input>
           </ion-item>
         </ion-col>
         <ion-col col-6>
           <ion-item no-margin no-padding>
-            <ion-input type="text" placeholder="Last name" [(ngModel)]="params.lastName"></ion-input>
+            <ion-input type="text" placeholder="{{'E_TICKET_PAGE.LASTNAME' | translate}}" [(ngModel)]="params.lastName"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col col-12>
           <ion-item no-margin no-padding>
-            <ion-input type="email" placeholder="Email" [(ngModel)]="params.email"></ion-input>
+            <ion-input type="email" placeholder="{{'E_TICKET_PAGE.EMAIL' | translate}}" [(ngModel)]="params.email"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
     </ion-grid>
 
     <ion-footer>
-      <button class="search-btn" (click)="search()" ion-button block color="primary" text-capitalize>Search</button>
+      <button class="search-btn" (click)="search()" ion-button block color="primary" text-capitalize>{{'E_TICKET_PAGE.SEARCH' | translate}}</button>
     </ion-footer>
 
   </div>
@@ -45,7 +45,7 @@
       <ion-list>
 
         <ion-label text-wrap class="message">
-          Enter E-Ticket number below to check if it is valid
+          {{'E_TICKET_PAGE.ENTER_E_TICKET_NUMBER_BELOW' | translate}}
         </ion-label>
 
         <ion-item  no-margin no-padding>
@@ -53,13 +53,13 @@
         </ion-item>
 
         <ion-label text-wrap class="comment">
-          E-Ticket will be marked as used
+          {{'E_TICKET_PAGE.E_TICKET_WILL_BE_MARKED' | translate}}
         </ion-label>
 
-        <button (click)="check()" ion-button block color="primary" text-capitalize>Check E-Ticket</button>
+        <button (click)="check()" ion-button block color="primary" text-capitalize>{{'E_TICKET_PAGE.CHECK_E_TICKET' | translate}}</button>
 
         <a ion-item (click)="findWithoutNumber()">
-          Don't have E-Ticket number?
+          {{'E_TICKET_PAGE.HAVE_NO_NUMBER' | translate}}
         </a>
 
       </ion-list>
