--- a/src/pages/transactions/transactions.html
+++ b/src/pages/transactions/transactions.html
@@ -5,10 +5,10 @@
     <ion-grid no-padding>
       <ion-row align-items-center>
         <ion-col text-center col-8 offset-2>
-          <ion-title><b>Transactions</b></ion-title>
+          <ion-title><b>{{ 'GENERAL.TRANSACTIONS' | translate }}</b></ion-title>
         </ion-col>
         <ion-col text-right col-2 *ngIf="currentPeriod || !isEmptyObject(params.search)" >
-          <button ion-button float-end text-capitalize clear color="clear" (click)="showAll()">All</button>
+          <button ion-button float-end text-capitalize clear color="clear" (click)="showAll()">{{ 'ALL' | translate }}</button>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -26,10 +26,10 @@
       </ion-col>
       <ion-col col-8>
         <div *ngIf="currentPeriod == 'day'; else notToday">
-          Today
+          {{ 'GENERAL.TODAY' | translate }}
         </div>
         <ng-template #notToday>
-          This <span text-capitalize>{{currentPeriod}}</span>
+          {{ 'TRANSACTIONS_PAGE.THIS' | translate }} <span text-capitalize>{{currentPeriod}}</span>
         </ng-template>
       </ion-col>
       <ion-col col-2>
@@ -41,10 +41,10 @@
   <ion-grid no-padding *ngIf="transactions">
     <ion-row *ngIf="!showedSearchInput;else searchInput">
       <ion-col col-6>
-        <button ion-button class="nav-btn" clear color="primary" (click)="sortBy()">Sort By</button>
+        <button ion-button class="nav-btn" clear color="primary" (click)="sortBy()">{{ 'TRANSACTIONS_PAGE.SORT_BY' | translate }}</button>
       </ion-col>
       <ion-col col-6 text-right>
-        <button *ngIf="!currentPeriod" ion-button class="nav-btn" clear color="primary" (click)="openSearch()">Search & Filters</button>
+        <button *ngIf="!currentPeriod" ion-button class="nav-btn" clear color="primary" (click)="openSearch()">{{ 'TRANSACTIONS_PAGE.SEARCH_FILTERS' | translate }}</button>
         <button *ngIf="currentPeriod" small ion-button class="nav-btn" icon-only clear color="primary" (click)="showSearchInput(true)">
           <ion-icon name="search"></ion-icon>
         </button>
@@ -56,7 +56,7 @@
           <ion-item no-padding>
             <ion-label><ion-icon name="search"></ion-icon></ion-label>
             <ion-input placeholder="Text Input" [(ngModel)]="searchInputValue" (input)="updateTransactions()"></ion-input>
-            <button ion-button class="btn-cancel" clear item-end (click)="showSearchInput(false)">Cancel</button>
+            <button ion-button class="btn-cancel" clear item-end (click)="showSearchInput(false)">{{ 'CANCEL' | translate }}</button>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -67,9 +67,9 @@
     <ion-item-divider class="header">
       <ion-label no-margin>
         <ion-row text-uppercase margin-right>
-          <ion-col col-2><span class="col-name">Date</span></ion-col>
-          <ion-col col-5><span class="col-name">Product name/order ID</span></ion-col>
-          <ion-col col-5 text-right><span class="col-name">Your Earnings</span></ion-col>
+          <ion-col col-2><span class="col-name">{{ 'TRANSACTIONS_PAGE.DATE' | translate }}</span></ion-col>
+          <ion-col col-5><span class="col-name">{{ 'TRANSACTIONS_PAGE.PRODUCT_NAME' | translate }}</span></ion-col>
+          <ion-col col-5 text-right><span class="col-name">{{ 'TRANSACTIONS_PAGE.YOUR_EARNINGS' | translate }}</span></ion-col>
         </ion-row>
       </ion-label>
     </ion-item-divider>
@@ -92,9 +92,9 @@
     <ion-row class="transactions-not-found">
       <ion-col col-8 offset-2>
         <ion-item no-lines no-padding>
-          <p>No results found.</p>
-          <p>Try to go through all transactions.</p>
-          <p><button no-margin ion-button clear (click)="openSearch()">Search & Filters</button></p>
+          <p>{{ 'TRANSACTIONS_PAGE.NO_RESULTS' | translate }}</p>
+          <p>{{ 'TRANSACTIONS_PAGE.SEE_ALL_TRANSACTIONS' | translate }}</p>
+          <p><button no-margin ion-button clear (click)="openSearch()">{{ 'TRANSACTIONS_PAGE.SEARCH_FILTERS' | translate }}</button></p>
         </ion-item>
       </ion-col>
     </ion-row>
