add tab translate

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs [selectedIndex]="tabID">
-  <ion-tab [root]="tabEarning" tabTitle="Earnings" tabIcon="custom-earning"></ion-tab>
-  <ion-tab [root]="tabTransactions" tabTitle="Transactions" tabIcon="custom-transactions"></ion-tab>
-  <ion-tab [root]="tabTicket" tabTitle="E-Ticket" tabIcon="custom-e-ticket"></ion-tab>
-  <ion-tab [root]="tabSettings" [tabsHideOnSubPages]="false" tabTitle="Settings" tabIcon="custom-settings"></ion-tab>
+  <ion-tab [root]="tabEarning" [tabTitle]="earnings" tabIcon="custom-earning"></ion-tab>
+  <ion-tab [root]="tabTransactions" [tabTitle]="transactions" tabIcon="custom-transactions"></ion-tab>
+  <ion-tab [root]="tabTicket" [tabTitle]="eticket" tabIcon="custom-e-ticket"></ion-tab>
+  <ion-tab [root]="tabSettings" [tabsHideOnSubPages]="false" [tabTitle]="settings" tabIcon="custom-settings"></ion-tab>
 </ion-tabs>
