--- a/src/pages/report/report.html
+++ b/src/pages/report/report.html
@@ -33,7 +33,7 @@
       <ion-item-group>
         <ion-item>
           <ion-label>{{ 'REPORT_PAGE.REPORT_AFFILIATE' | translate }}</ion-label>
-          <ion-toggle formControlName="affiliate" color="secondary"></ion-toggle>
+          <ion-toggle mode="ios" formControlName="affiliate" color="secondary"></ion-toggle>
         </ion-item>
       </ion-item-group>
     </section>
