fixed and translated ParamsPage and fix TicketDetailsPage

--- a/src/pages/params/params.html
+++ b/src/pages/params/params.html
@@ -6,7 +6,7 @@
       <button text-capitalize ion-button clear color="clear" (click)="dismiss()" icon-left><ion-icon name="ios-arrow-back"></ion-icon></button>
     </ion-buttons>
 
-    <ion-title padding-right text-center><b>{{ pageName }}</b></ion-title>
+    <ion-title padding-right text-center><b>{{ 'SEARCH_FILTERS_PAGE.' + pageName.toUpperCase().replace(' ', '_') | translate }}</b></ion-title>
 
   </ion-navbar>
 
@@ -17,19 +17,19 @@
 
   <ion-list radio-group [(ngModel)]="affiliate" no-padding *ngIf="pageName == 'Affiliate'">
     <ion-item mode="ios">
-      <ion-label color="dark">All</ion-label>
+      <ion-label color="dark">{{ 'ALL' | translate }}</ion-label>
       <ion-radio mode="ios" value="" (ionSelect)="showInputAffiliateName(false)"></ion-radio>
     </ion-item>
     <ion-item mode="ios">
-      <ion-label color="dark">With {{ pageName }}</ion-label>
+      <ion-label color="dark">{{ 'SEARCH_FILTERS_PAGE.WITH_AFFILIATE' | translate }}</ion-label>
       <ion-radio mode="ios" value="Y" (ionSelect)="showInputAffiliateName(false)"></ion-radio>
     </ion-item>
     <ion-item mode="ios">
-      <ion-label color="dark">Without {{ pageName }}</ion-label>
+      <ion-label color="dark">{{ 'SEARCH_FILTERS_PAGE.WITHOUT_AFFILIATE' | translate }}</ion-label>
       <ion-radio mode="ios" value="N" (ionSelect)="showInputAffiliateName(false)"></ion-radio>
     </ion-item>
     <ion-item mode="ios" no-lines>
-      <ion-label color="dark">Enter {{ pageName }}</ion-label>
+      <ion-label color="dark">{{ 'ENTER' | translate }} {{ 'SEARCH_FILTERS_PAGE.AFFILIATE' | translate }}</ion-label>
       <ion-radio mode="ios" value="name" (ionSelect)="showInputAffiliateName(true)"></ion-radio>
     </ion-item>
     <ion-row class="white-bg" *ngIf="showedInputAffiliateName">
@@ -43,7 +43,7 @@
 
   <ion-list no-padding *ngIf="pageName == 'Transaction type' || pageName == 'Billing type'">
     <ion-item mode="ios">
-      <ion-label color="dark">Any</ion-label>
+      <ion-label color="dark">{{ 'ANY' | translate }}</ion-label>
       <ion-checkbox item-right mode="ios" [(ngModel)]="anyValue" (ionChange)="clearCheckboxesTypes()"></ion-checkbox>
     </ion-item>
     <ion-item mode="ios" *ngFor="let type of types">
