added translate to native back button & Title E-ticketParamsPage

--- a/src/pages/ticket/ticket-params/ticket-params.html
+++ b/src/pages/ticket/ticket-params/ticket-params.html
@@ -6,7 +6,7 @@
       <button class="arrow" text-capitalize ion-button clear color="clear" (click)="dismiss()" icon-left><ion-icon name="ios-arrow-back"></ion-icon></button>
     </ion-buttons>
 
-    <ion-title padding-right text-center><b>{{ pageName }}</b></ion-title>
+    <ion-title padding-right text-center><b>{{'E_TICKET_PAGE.' + (pageName == 'E-Ticket template' ? 'TEMPLATE' : 'LOCATION') | translate }}</b></ion-title>
 
   </ion-navbar>
 
