remove white screen, hide order id and show product id

--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -61,11 +61,11 @@
         <form [formGroup]="searchFormExtended">
 
           <ion-list no-margin padding-top padding-horizontal [hidden]="activeTab !== 'product'">
-            <ion-item no-margin no-padding>
-              <ion-input formControlName="purchase_id" type="text" placeholder="{{ 'SEARCH_FILTERS_PAGE.ORDER_ID' | translate}}"></ion-input>
-            </ion-item>
+            <!--<ion-item no-margin no-padding>-->
+              <!--<ion-input formControlName="purchase_id" type="text" placeholder="{{ 'SEARCH_FILTERS_PAGE.ORDER_ID' | translate}}"></ion-input>-->
+            <!--</ion-item>-->
 
-            <ion-item no-margin no-padding hidden>
+            <ion-item no-margin no-padding>
               <ion-input formControlName="product_id" type="text" placeholder="Product ID"></ion-input>
             </ion-item>
 
